--- a/templates/new.html
+++ b/templates/new.html
@@ -12,9 +12,9 @@ nimi:
 annoksia: <input type="number" name="serves" value={{serves}}>
 <br> 
 valmistusaika: 
-<input type="number" name="active" placeholder="aktiivinen" value={{active}}>
+<input type="number" step=".05" name="active" placeholder="aktiivinen" value={{active}}>
 <br>
-<input type="number" name="passive" placeholder="passiivinen" value={{passive}}>
+<input type="number" step=".05" name="passive" placeholder="passiivinen" value={{passive}}>
 <br>
 <p class="error">{{ error3 }}</p>
 <p>Ainekset:<br>
