Recipe page shows like-count

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 <title>Reseptisovellus</title>
-
+<br>
+<a>Palvelussa reseptejä {{ r_amount }} kpl</a>
 {% if session.user_id %}
 <h1>Tervetuloa {{name}}!</h1>
 <p>Olet kirjautunut sisään.</p>
