--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -9,7 +9,7 @@
 <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 {% endif %}
-
+<a>Resepti on {{ fav_count }} käyttäjän suosikeissa</a>
 <p>lisääjä: {{ creator }}</p>
 <p>
 <p>Annoksia: {{ serves }} 
