Add sorting by alphabetical order, set as default

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -16,6 +16,7 @@
 <input type="submit" name="Apopular" class="button" value="suosio"></input>
 <input type="submit" name="Aspeed" class="button" value="nopeus"></input>
 <input type="submit" name="Aincredients" class="button" value="ainesmäärä"></input>
+<input type="submit" name="Alphabetical" class="button" value="aakkosjärjestys"></input>
 
 <ul id="list">
     <h2 id="heading"></h2>
