--- a/templates/modify.html
+++ b/templates/modify.html
@@ -20,9 +20,9 @@ Passiivinen: <input type="number" step=".05" name="t_passive" class="input" valu
         <input type="text" name="n_{{inc[3]}}" class="input" value={{inc.name}}>
         <input type="submit" name="{{inc[3]}}" class="button" value="Muuta">
     {% endfor %}
-    <li> <input type="number" style="width: 4em" name="r_inc" class="input" placeholder="määrä">
-        <input type="text" size="6" name="r_inc" class="input" placeholder="mittayks.">
-        <input type="text" name="r_inc" class="input" placeholder="nimi"><input type="submit" name="new_inc" class="button" value="Lisää">
+    <li> <input type="number" style="width: 4em" name="r_q" class="input" placeholder="määrä">
+        <input type="text" size="6" name="r_s" class="input" placeholder="mittayks.">
+        <input type="text" name="r_n" class="input" placeholder="nimi"><input type="submit" name="new_inc" class="button" value="Lisää">
 </ul>
 <br>
 <h4>Ohje</h4>
