Check user inputs in incredient adding and modifying

--- a/templates/modify.html
+++ b/templates/modify.html
@@ -23,6 +23,8 @@ Passiivinen: <input type="number" step=".05" name="t_passive" class="input" valu
     <li> <input type="number" style="width: 4em" name="r_q" class="input" placeholder="määrä">
         <input type="text" size="6" name="r_s" class="input" placeholder="mittayks.">
         <input type="text" name="r_n" class="input" placeholder="nimi"><input type="submit" name="new_inc" class="button" value="Lisää">
+    <br>
+    {{ incredient_error }}
 </ul>
 <br>
 <h4>Ohje</h4>
