--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <title>Reseptisovellus</title>
 <br>
-<a>Palvelussa reseptejä {{ r_amount }} kpl</a>
+<a>Palvelussa reseptejä <span style="color: #008B8B;">{{ r_amount }}</span> kpl</a>
 {% if session.user_id %}
 <h1>Tervetuloa {{name}}!</h1>
 <p>Olet kirjautunut sisään.</p>
