--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <div class="header">
 <title>Reseptisovellus</title>
-    <div class="box box1"><h1><a href="/" class="box box1">Reseptisovellus</a></div></h1>
+    <div class="box box1"><h1><a href="/" class="box box1">Reseptisovellus</a></h1></div>
     <div class="box box2">
         {% if session.user_id %}
         <a href="/logout" class="button"> Kirjaudu ulos</a>
