--- a/templates/users_recipes.html
+++ b/templates/users_recipes.html
@@ -1,20 +1,31 @@
 {% extends "layout.html" %}
 {% block content %}
 {% if session.user_id %}
-<br>
-<a href="/welcome">Palaa omalle sivulle</a> <a href="/new">Lisää uusi resepti</a>
+<div class="logblock">
+    <a href="/welcome" class="button" style="background-color: #222B35;">Oma sivu</a>
+    <a href="/recipes" class="button" style="background-color: #222B35;">Reseptit</a>
+    <a href="/new" class="button" style="background-color: #222B35;">Luo uusi resepti</a>
+    <a href="/favorites" class="button" style="background-color: #222B35;">Omat suosikit</a>
+</div> 
 <h2>Käyttäjän {{ name }} lisäämät reseptit:</h2>
 <ul>
     {% for r in recipes %}
-    <li><a href="/recipe/{{ r.id }}">{{ r.name }}</a> | <a href="/modify/{{ r.id }}"> muokkaa </a>
+    <li><a href="/recipe/{{ r.id }}">{{ r.name }}</a> | <a href="/modify/{{ r.id }}" class="tag" style="background-color: #008B8B;"> muokkaa </a>
     {% endfor %}
     </ul>
 <p>
 <p>
 {% else %}
-Tällä sivulla on kirjautuneen käyttäjän toimintoja.
-<p>
-Vaikuttaisi siltä ettet ole <a href="/login">kirjautunut sisään</a>.
-<p>
+<h3>Tällä sivulla on sisäänkirjautuneen käyttäjän toimintoja</h3>
+<div class="logblock"> 
+    <h3 class="loglink">Sisäänkirjautuneena voit</h3>
+    <ul>
+      <li>Luoda uusia reseptejä</li>
+      <li>Merkitä reseptejä suosikiksi</li>
+    </ul>
+    <a href="/login" class="loglink"> Sisäänkirjautumiseen</a>
+    <br>
+    <a href="/register" class="loglink">Luo käyttäjätunnus</a>
+</div>
 {% endif %}
 {% endblock %}
