--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 <form action="/login" method="POST">
-<h2>Kirjaudu sisään</h2>
-<p>
-{{ error }}
-<p>
-Anna käyttäjätunnus:
-<input type="text" name="username">
-<p>
-Anna salasana:
-<input type="password" name="password">
-<p>
+<h1>Kirjaudu sisään</h1>
+<p class="error">{{ error }}</p>
+<p>Anna käyttäjätunnus:
+    <input type="text" name="username"></p>
+<p>Anna salasana:
+    <input type="password" name="password"></p>
 <input type="submit" class="button" value="Kirjaudu">
 </form>
 {% endblock %}
