--- a/templates/register.html
+++ b/templates/register.html
@@ -2,17 +2,17 @@
 {% block content %}
 <form action="/register" method="POST">
 <h1>Uusi käyttäjätunnus</h1>
-<p>
 <p class="error">{{ e_name }}</p>
-<p>
-Anna nimimerkki: <input type="text" name="username" value="{{name}}">
-<p>
+<p>Käyttäjätunnus: 
+    <input type="text" name="username" value="{{name}}">
+</p>
 <p class="error">{{ e_match }}{{ e_length }}</p>
-Anna salasana: <input type="password" name="password1">
-<p>
-Anna salasana uudelleen: <input type="password" name="password2">
-<p>
+<p>Anna salasana: 
+    <input type="password" name="password1">
+</p>
+<p>Toista salasana: 
+    <input type="password" name="password2">
+</p>
 <input type="submit" class="button" value="Luo tunnus">
 </form>
-<p>
 {% endblock %}
